# basic-pitch-torch

./: pyproject.toml
basic_pitch_torch/: note_creation.py
