[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-pitch-torch"
version = "0.1.0"
description = "PyTorch reimplementation of Spotify's Basic Pitch (ICASSP 2022)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "gudgud96" }
]
requires-python = ">=3.8"

dependencies = [
    "torch>=1.12",
    "torchaudio>=0.12",
    "numpy>=1.20",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[project.urls]
Homepage = "https://github.com/gudgud96/basic-pitch-torch"
Repository = "https://github.com/gudgud96/basic-pitch-torch"
Issues = "https://github.com/gudgud96/basic-pitch-torch/issues"

[tool.setuptools]
packages = ["basic_pitch_torch"]

[tool.setuptools.package-data]
basic_pitch_torch = ["../assets/*.pth"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc"]